# everything-app

./: .env.example  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/backend/backend/: settings.py  urls.py
backend/backend/journal/: forms.py  models.py  serializers.py  urls.py  views.py
backend/backend/journal/migrations/: 0001_initial.py  0002_alter_journalentry_entry_date.py
backend/backend/journal/templates/journal/: index.html
backend/backend/pushups/: forms.py  models.py  urls.py  views.py
backend/backend/pushups/migrations/: 0001_initial.py
backend/backend/pushups/templates/pushups/: index.html
